Fix right overflow

--- a/css/index.css
+++ b/css/index.css
@@ -40,6 +40,7 @@ body {
 
 .overflow-hidden {
   overflow: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 .header {
@@ -173,6 +174,8 @@ body {
   position: absolute;
   width: 0;
   height: 100vh;
+  overflow: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 .mobile-content-visible {
